Replace ~ with homeDirPath in Session's Exec entries.

BUG: 102941

svn path=/trunk/kdebase/konsole/; revision=402304